	  pipeline_readline, pipeline_peekline): New functions.

	* lib/decompress.c, lib/decompress.h: New files, implementing a
	  decompression abstraction layer.
	* lib/Makefile.in: Always compile decompress.c.

	* src/lexgrog.l (YY_INPUT): Define to read from a 'struct pipeline'.
	  (find_name): Use decompress_open/decompress_fdopen rather than
	  older decompression methods.
	* src/check_mandirs.c (test_manfile): Remove decompression code;
	  find_name will handle this itself now.
	* src/compression.c (create_ztemp, decompress, remove_ztemp,
	  get_ztemp): Remove.
	* src/man.c (checked_popen): Remove.
	  (local_man_loop): Remove decompression code.
	  (get_preprocessors_from_file): Convert to peeking the first line
	  from a pipeline.
	  (get_preprocessors): Adjust arguments and
	  get_preprocessors_from_file call.
	  (remove_stdintmp, create_stdintmp): Remove.
	  (make_roff_command): Remove special handling of stdin, now handled
	  by peeking a pipeline.
	  (open_cat_stream): Don't start the returned pipeline.
	  (close_cat_stream): Remove unnecessary COMP_CAT special case.
	  (format_display_and_save): Take a decompressor pipeline argument.
	  Simplify by using pipeline_connect and pipeline_pump.
	  (format_display): Take a decompressor pipeline argument. Use
	  pipeline_connect and pipeline_pump.
	  (display): Use decompress_open/decompress_fdopen rather than older
	  decompression methods.
	  (display_filesystem, display_database): Drop remove_ztemp calls.
	* src/straycats.c (check_for_stray): Use decompression layer.
	  Rearrange control flow a bit to reduce duplication.
	* src/ult_src.c (ult_src): Use pipeline and decompression layers
	  rather than older decompression methods.
	* src/zsoelim.l (YY_INPUT): Define to read from a 'struct pipeline'.
	  (<so>\"?[^ \t\n\"]+\"?): Call open_file only once; let it worry
	  about compression extensions. Decrement so_stack_ptr here if
	  open_file fails rather than having it do it.